<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent">

    <TextView
        android:id="@+id/tvHowToUse"
        style="@style/TextStyle14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_to_use_flashlightworks"
        android:textAlignment="textStart"
        android:includeFontPadding="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFirstPointBullet"
        style="@style/TextStyle8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:paddingEnd="0dp"
        android:includeFontPadding="false"
        android:text="@string/onlyBullet"
        app:layout_constraintEnd_toStartOf="@+id/tvFirstPointText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHowToUse" />

    <TextView
        android:id="@+id/tvFirstPointText"
        style="@style/TextStyle15"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:paddingTop="@dimen/_4sdp"
        android:includeFontPadding="false"
        android:text="@string/open_the_prankpluse_app_on_your_device"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvFirstPointBullet"
        app:layout_constraintTop_toTopOf="@+id/tvFirstPointBullet" />
    <TextView
        android:id="@+id/tvSecondPointBullet"
        style="@style/TextStyle8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:paddingEnd="0dp"
        android:includeFontPadding="false"
        android:text="@string/onlyBullet"
        app:layout_constraintEnd_toStartOf="@+id/tvSecondPointText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFirstPointText" />

    <TextView
        android:id="@+id/tvSecondPointText"
        style="@style/TextStyle15"
        android:layout_width="0dp"
        android:includeFontPadding="false"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:text="@string/the_dashboard"
        android:paddingTop="@dimen/_4sdp"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvSecondPointBullet"
        app:layout_constraintTop_toBottomOf="@+id/tvFirstPointText" />
    <TextView
        android:id="@+id/tvThirdPointBullet"
        style="@style/TextStyle8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:paddingEnd="0dp"
        android:includeFontPadding="false"
        android:text="@string/onlyBullet"
        app:layout_constraintEnd_toStartOf="@+id/tvThirdPointText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSecondPointText" />
    <TextView
        android:id="@+id/tvThirdPointText"
        style="@style/TextStyle15"
        android:layout_width="0dp"
        android:includeFontPadding="false"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:paddingEnd="0dp"
        android:paddingTop="@dimen/_4sdp"
        android:text="@string/selecting_modes"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvThirdPointBullet"
        app:layout_constraintTop_toBottomOf="@+id/tvSecondPointText" />

    <TextView
        android:id="@+id/tvFourthPointBullet"
        style="@style/TextStyle8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:paddingEnd="0dp"
        android:includeFontPadding="false"
        android:text="@string/onlyBullet"
        app:layout_constraintEnd_toStartOf="@+id/tvFourthPointText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvThirdPointText" />
    <TextView
        android:id="@+id/tvFourthPointText"
        style="@style/TextStyle15"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:paddingEnd="0dp"
        android:includeFontPadding="false"
        android:paddingTop="@dimen/_4sdp"
        android:text="@string/selecting_clear"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvFourthPointBullet"
        app:layout_constraintTop_toBottomOf="@+id/tvThirdPointText" />
    <View
        android:id="@+id/viewBottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvManageDataPref"
        app:layout_constraintTop_toBottomOf="@+id/tvManageDataPref" />

    <TextView
        android:id="@+id/tvManageDataPref"
        style="@style/TextStyle_poppins_semibold_17"
        android:layout_width="@dimen/_240sdp"
        android:layout_height="@dimen/_48sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/startbtn"
        android:gravity="center"
        android:includeFontPadding="false"
        android:paddingBottom="@dimen/_4sdp"
        android:text="@string/manage_data_preferences"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFourthPointText" />

</androidx.constraintlayout.widget.ConstraintLayout>