<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/transparent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tvtitleHeading"
       style="@style/TextStyle"
        android:text="WordCheck:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_17sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/tvTitle"
        style="@style/TextStyle12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:lineSpacingMultiplier="0.7"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:text="@string/prankpulse_with_column"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvtitleHeading" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/_142sdp"
        android:layout_height="@dimen/_70sdp"
        tools:ignore="MissingConstraints"
        android:src="@drawable/splash_image"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"/>

    <TextView
        android:id="@+id/tvUnlimitedPrank"
        style="@style/TextStyle11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:lineSpacingExtra="@dimen/_minus1sdp"
        android:text="@string/your_unlimited_prank_sound_app"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"/>

    <TextView
        android:id="@+id/tvGetReadyForTheWorld"
        style="@style/TextStyle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:includeFontPadding="false"
        android:lineSpacingMultiplier="0.7"
        android:visibility="gone"
        android:text="@string/flashlightworks_is_your_reliable_companion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUnlimitedPrank" />

</androidx.constraintlayout.widget.ConstraintLayout>